--- a/style.css
+++ b/style.css
@@ -15,8 +15,30 @@ header {
 }
 
 nav {
-  margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;        
+  justify-content: center; 
+  gap: 1rem;              
 }
+
+/* Pantallas pequeñas */
+@media (max-width: 480px) {
+  nav {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    grid-template-rows: auto auto;       
+    gap: 10px;
+    justify-items: center;
+    max-width: 300px;  
+    margin: 0 auto;
+  }
+
+    nav a:last-child {
+    grid-column: 1 / span 3;  
+    margin-top: 5px;
+  }
+}
+
 
 nav a {
   color: #fff;
@@ -128,6 +150,7 @@ footer {
   text-align: center;
   min-height: 400px;
   overflow: hidden; /* para que las estrellas no salgan del área */
+  height: 400px;
 }
 
 #sobre-mi::before {
@@ -276,6 +299,29 @@ footer {
 
 }
 
+/* Para pantallas movil */
+@media (max-width: 480px) {
+  .contact-buttons {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 15px;                             
+    max-width: 260px;                      
+    margin: 0 auto;                        
+    padding: 0 10px;                       
+    box-sizing: border-box;
+  }
+
+  .contact-buttons a {
+    width: 100%;                            
+    padding: 12px 20px;                    
+    display: flex;                           
+    align-items: center;
+    justify-content: center;
+    gap: 8px;                                
+    box-sizing: border-box;
+    text-align: center;
+  }
+}
 
 #proyectos {
   padding: 4rem 1rem;
@@ -316,8 +362,9 @@ footer {
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   overflow: hidden;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   transition: transform 0.3s ease;
+  flex-direction: row; 
 }
 
 .proyecto-card:hover {
@@ -325,8 +372,8 @@ footer {
 }
 
 .imagen-proyecto {
-  width: 50%;
-  height: 200px;
+  width: 40%;
+  height: 300px;
   background-color: #ddd; 
   background-size: cover;
   background-position: center;
@@ -341,8 +388,8 @@ footer {
   position: absolute;
   top: 0;
   left: 0;
-  width: 50%;   /* igual que la imagen */
-  height: 250px; 
+  width: 40%;   /* igual que la imagen */
+  height: 300px; 
   cursor: pointer;
   z-index: 2;
 }
@@ -351,11 +398,12 @@ footer {
   padding: 1rem;
   text-align: left;
   flex: 1;
+  border-left: 1px solid rgba(0,0,0,0.1);
 }
 
 /* Etiquetas de tecnologías en proyectos */
 .tags {
-  margin-top: 1rem;
+  margin-top: 2rem;
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
@@ -378,7 +426,7 @@ footer {
 }
 
 .botones-proyecto {
-  margin-top: 15px;
+  margin-top: 60px;
 }
 
 .botones-proyecto a {
@@ -400,4 +448,18 @@ footer {
   background-color: #3149B0;
   color: white;
   transform: translateY(-2px);
+}
+
+
+/* Móviles: imagen arriba, contenido abajo */
+@media (max-width: 767px) {
+  .proyecto-card {
+    flex-direction: column;
+  }
+
+  .imagen-proyecto,
+  .overlay-link {
+    width: 100%;
+    height: 180px; /* más compacta en móvil */
+  }
 }
